# mini_transformers

./: .gitignore  pyproject.toml
mini_transformers/: data_load.py
mini_transformers/models/: bigram_model.py  components.py  embedding_model.py  litbigram.py
notebooks/: base_experiment.ipynb  dataload.ipynb  test.ipynb  test_dataloader.ipynb
scripts/: run_checks.py
scripts/dev_utils/: clear_files.py
scripts/training/: train_bigram.py
tests/: test_import.py  test_models.py
